# greentic-state

./: Cargo.toml  README.md
.codex/: StatePR-02.md  repo_overview.md
.github/workflows/: auto-tag.yml  publish.yml
ci/: local_check.sh
docs/: component-state.md
examples/: quickstart.rs
scripts/: version-tools.sh
src/: error.rs  inmemory.rs  key.rs  lib.rs  redis_store.rs  store.rs  util.rs
tests/: bulk_delete.rs  json_roundtrip.rs  redis_docker.rs  semantics.rs  ttl.rs
