[workspace]
members = [".", "vendor/greentic-interfaces"]

[package]
name = "greentic-state"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Greentic JSON working-memory store with in-memory and Redis backends"
repository = "https://github.com/greentic-ai/greentic-state"
keywords = ["greentic", "state", "redis", "json", "multi-tenant"]
categories = ["data-structures", "asynchronous"]
readme = "README.md"

[features]
default = ["redis"]
redis = ["dep:redis"]
schema = ["dep:schemars", "greentic-types/schemars"]

[dependencies]
greentic-types = { version = "^0.1" }
greentic-interfaces = { version = "0.4.3", path = "vendor/greentic-interfaces", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "parsing"] }
parking_lot = "0.12"
dashmap = "6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
redis = { version = "0.32", features = ["tokio-comp"], optional = true }
schemars = { version = "1", optional = true }
tracing = "0.1"

[dev-dependencies]
proptest = "1"
uuid = { version = "1", features = ["v4"] }
